Update API specification.+
